src/components/ControlPlane/MCPHealthPopoverButton.module.css
.statusTable {
  width: 770px;
  margin-left: -2rem;
  margin-right: -2rem;
  margin-top: -1rem;
}

.lastTransitionTime {
  margin-top: 8px;
  font-size: 0.875rem;
  color: var(--sapContent_LabelColor);
}

.supportTicketContainer {
  margin-top: 0.5rem;
}

.iconReady {
  color: var(--sapPositiveColor);
}

.iconNotReady {
  color: var(--sapNegativeColor);
}

.iconInDeletion {
  color: var(--sapCriticalColor);
}

.footer {
  width: 100%;
  padding: 0.25rem 0;
}

.yamlViewer {
  margin-top: 1rem;
  width: 100%;
}

.conditionContent {
  min-width: 680px;
  max-width: 680px;
}

.yamlContainer {
  margin-top: 1rem;
  width: 100%;
  height: 320px;
}

